--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -1,10 +1,50 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ko">
 <head>
-  <meta charset="UTF-8">
-  <title>$Title$</title>
+  <meta charset="UTF-8" />
+  <title>구름 시네마</title>
+  <link rel="stylesheet" href="/css/style.css">
+  <style>
+    .hero {
+      background-color: #3366ff;
+      color: white;
+      padding: 60px 30px;
+      text-align: center;
+      border-radius: 12px;
+    }
+
+    .hero h1 {
+      font-size: 40px;
+      margin-bottom: 16px;
+    }
+
+    .hero p {
+      font-size: 18px;
+      opacity: 0.9;
+    }
+
+    .btn-start {
+      margin-top: 30px;
+      padding: 12px 24px;
+      font-size: 16px;
+      border-radius: 8px;
+      background-color: white;
+      color: #3366ff;
+      font-weight: bold;
+      text-decoration: none;
+      display: inline-block;
+    }
+
+    .btn-start:hover {
+      background-color: #e8ecff;
+    }
+  </style>
 </head>
 <body>
-$END$
+<div class="hero">
+  <h1>🎬 구름 시네마</h1>
+  <p>지금 가장 핫한 공연과 이벤트를 한눈에 확인하고 예매하세요!</p>
+  <a class="btn-start" href="/events.html">공연 보러 가기</a>
+</div>
 </body>
 </html>
