--- a/src/main/resources/static/event-detail.html
+++ b/src/main/resources/static/event-detail.html
@@ -1,10 +1,40 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ko">
 <head>
-  <meta charset="UTF-8">
-  <title>$Title$</title>
+  <meta charset="UTF-8" />
+  <title>공연 상세</title>
+  <link rel="stylesheet" href="style.css">
+  <script>
+    document.addEventListener('DOMContentLoaded', async function () {
+      const urlParams = new URLSearchParams(window.location.search);
+      const eventId = urlParams.get('event_id');
+
+      const res = await fetch(`/events/${eventId}`);
+      const event = await res.json();
+
+      document.getElementById('poster').src = event.poster_url;
+      document.getElementById('title').textContent = event.title;
+      document.getElementById('description').textContent = event.description;
+      document.getElementById('cast').textContent += event.cast_summary;
+      document.getElementById('venue').textContent += event.venue.name;
+      document.getElementById('avg-rating').textContent += event.avg_rating;
+      document.getElementById('trailer-iframe').src = event.trailer_url;
+
+      document.getElementById('seat-link').href = `seats.html?schedule_id=1`; // 스케줄 아이디 예시
+    });
+  </script>
 </head>
 <body>
-$END$
+<img id="poster" />
+<h1 id="title"></h1>
+<p id="description"></p>
+<p id="cast">출연진: </p>
+<p id="venue">장소: </p>
+<p id="avg-rating">평점: </p>
+<iframe id="trailer-iframe" width="560" height="315" frameborder="0" allowfullscreen></iframe>
+<br/>
+<a id="seat-link">좌석 예매하기</a>
+<br/><br/>
+<a href="review-modal.html?event_id=1">후기 작성</a>
 </body>
 </html>
