--- a/src/main/resources/static/events.html
+++ b/src/main/resources/static/events.html
@@ -1,10 +1,154 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ko">
 <head>
-  <meta charset="UTF-8">
-  <title>$Title$</title>
+    <meta charset="UTF-8" />
+    <title>이벤트 목록</title>
+    <link rel="stylesheet" href="/css/style.css">
+    <style>
+        .event-card {
+          border: 1px solid #ccc;
+          padding: 10px;
+          margin-bottom: 10px;
+          display: flex;
+          gap: 10px;
+          align-items: center;
+        }
+
+        .event-card img {
+          width: 100px;
+          height: auto;
+        }
+
+        .pagination {
+          margin-top: 20px;
+          text-align: center;
+        }
+
+        .pagination button {
+          margin: 0 3px;
+          padding: 6px 12px;
+          background-color: white;
+          border: 1px solid #ccc;
+          border-radius: 4px;
+          cursor: pointer;
+        }
+
+        .pagination button.active {
+          background-color: #3366ff;
+          color: white;
+          font-weight: bold;
+        }
+    </style>
 </head>
 <body>
-$END$
+<h1>공연 목록</h1>
+
+<form id="filter-form">
+    <select name="category_id">
+        <option value="">전체 카테고리</option>
+        <option value="1">뮤지컬</option>
+        <option value="2">연극</option>
+        <option value="3">콘서트</option>
+    </select>
+    <input type="text" name="q" placeholder="검색어 입력" />
+    <select name="sort">
+        <option value="">정렬 기준 선택</option>
+        <option value="latest">최신순</option>
+        <option value="hits">조회순</option>
+        <option value="score">평점순</option>
+    </select>
+    <button type="submit">검색</button>
+</form>
+
+<div id="event-list"></div>
+<div id="pagination" class="pagination"></div>
+
+<script>
+    document.addEventListener('DOMContentLoaded', function () {
+      const form = document.getElementById('filter-form');
+      const eventList = document.getElementById('event-list');
+      const pagination = document.getElementById('pagination');
+      const PER_PAGE = 10;
+      let fullData = [];
+      let currentPage = 1;
+
+      form.addEventListener('submit', async function (e) {
+        e.preventDefault();
+        const category_id = form.category_id.value.trim();
+        const q = form.q.value.trim();
+        const sort = form.sort.value.trim();
+
+        if (!category_id) {
+          alert("카테고리를 선택해주세요.");
+          return;
+        }
+        if (!q) {
+          alert("검색어를 입력해주세요.");
+          return;
+        }
+        if (!sort) {
+          alert("정렬 기준을 선택해주세요.");
+          return;
+        }
+
+        try {
+          const res = await fetch(`/events?category_id=${category_id}&q=${q}&sort=${sort}`);
+          const data = await res.json();
+          fullData = Array.isArray(data) ? data : [];
+          renderPage(1);
+        } catch (err) {
+          console.error("데이터 불러오기 실패:", err);
+          eventList.innerHTML = '<p>데이터를 불러오는 데 실패했습니다.</p>';
+        }
+      });
+
+      function renderPage(page) {
+        currentPage = page;
+        const start = (page - 1) * PER_PAGE;
+        const end = start + PER_PAGE;
+        const sliced = fullData.slice(start, end);
+
+        eventList.innerHTML = sliced.map(event => `
+          <div class="event-card">
+            <a href="event-detail.html?event_id=${event.event_id}">
+              <img src="${event.poster_url}" alt="포스터" />
+              <div>
+                <h3>${event.title}</h3>
+                <p>${event.venue_name}</p>
+                <p>⭐️ ${event.avg_rating} | 조회수 ${event.hits}</p>
+              </div>
+            </a>
+          </div>
+        `).join('');
+
+        renderPagination();
+        window.scrollTo({ top: 0, behavior: 'smooth' });
+      }
+
+      function renderPagination() {
+        const totalPages = Math.ceil(fullData.length / PER_PAGE);
+        pagination.innerHTML = '';
+
+        for (let i = 1; i <= totalPages; i++) {
+          const btn = document.createElement('button');
+          btn.textContent = i;
+          btn.dataset.page = i;
+          if (i === currentPage) {
+            btn.classList.add('active');
+          }
+          pagination.appendChild(btn);
+        }
+      }
+
+      pagination.addEventListener('click', function (e) {
+        if (e.target.tagName === 'BUTTON') {
+          const page = Number(e.target.dataset.page);
+          if (!isNaN(page)) {
+            renderPage(page);
+          }
+        }
+      });
+    });
+</script>
 </body>
 </html>
