--- a/src/main/resources/static/seats.html
+++ b/src/main/resources/static/seats.html
@@ -1,10 +1,35 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ko">
 <head>
-  <meta charset="UTF-8">
-  <title>$Title$</title>
+  <meta charset="UTF-8" />
+  <title>좌석도</title>
+  <link rel="stylesheet" href="style.css">
+  <script>
+    document.addEventListener('DOMContentLoaded', async function () {
+      const urlParams = new URLSearchParams(window.location.search);
+      const scheduleId = urlParams.get('schedule_id');
+
+      const res = await fetch(`/schedules/${scheduleId}/seats`);
+      const data = await res.json();
+
+      const map = document.getElementById('seat-map');
+      data.seat_map.forEach(row => {
+        const rowDiv = document.createElement('div');
+        rowDiv.style.margin = "5px 0";
+        row.forEach(seat => {
+          const seatBtn = document.createElement('button');
+          seatBtn.textContent = seat.number;
+          seatBtn.disabled = seat.is_sold;
+          seatBtn.style.marginRight = '5px';
+          rowDiv.appendChild(seatBtn);
+        });
+        map.appendChild(rowDiv);
+      });
+    });
+  </script>
 </head>
 <body>
-$END$
+<h1>좌석 선택</h1>
+<div id="seat-map"></div>
 </body>
 </html>
