--- a/src/main/resources/static/events.html
+++ b/src/main/resources/static/events.html
@@ -38,13 +38,6 @@
           color: white;
           font-weight: bold;
         }
-
-        .no-result {
-          text-align: center;
-          margin-top: 30px;
-          font-size: 18px;
-          color: #666;
-        }
     </style>
 </head>
 <body>
@@ -85,8 +78,16 @@
         const q = form.q.value.trim();
         const sort = form.sort.value.trim();
 
-        if (!category_id || !q || !sort) {
-          alert("카테고리, 검색어, 정렬 기준을 모두 선택해주세요.");
+        if (!category_id) {
+          alert("카테고리를 선택해주세요.");
+          return;
+        }
+        if (!q) {
+          alert("검색어를 입력해주세요.");
+          return;
+        }
+        if (!sort) {
+          alert("정렬 기준을 선택해주세요.");
           return;
         }
 
@@ -94,17 +95,10 @@
           const res = await fetch(`/events?category_id=${category_id}&q=${q}&sort=${sort}`);
           const data = await res.json();
           fullData = Array.isArray(data) ? data : [];
-
-          if (fullData.length == 0) {
-            eventList.innerHTML = '<p class="no-result">검색 결과가 없습니다.</p>';
-            pagination.innerHTML = '';
-          } else {
-            renderPage(1);
-          }
+          renderPage(1);
         } catch (err) {
           console.error("데이터 불러오기 실패:", err);
-          eventList.innerHTML = '<p class="no-result">데이터를 불러오는 데 실패했습니다.</p>';
-          pagination.innerHTML = '';
+          eventList.innerHTML = '<p>데이터를 불러오는 데 실패했습니다.</p>';
         }
       });
 
@@ -114,20 +108,14 @@
         const end = start + PER_PAGE;
         const sliced = fullData.slice(start, end);
 
-        if (sliced.length === 0) {
-          eventList.innerHTML = '<p class="no-result">검색 결과가 없습니다.</p>';
-          pagination.innerHTML = '';
-          return;
-        }
-
         eventList.innerHTML = sliced.map(event => `
           <div class="event-card">
             <a href="event-detail.html?event_id=${event.event_id}">
-              <img src="${event.poster_url || '/images/default.jpg'}" alt="포스터" />
+              <img src="${event.poster_url}" alt="포스터" />
               <div>
                 <h3>${event.title}</h3>
                 <p>${event.venue_name}</p>
-                <p>⭐️ ${event.avg_rating ?? 0.0} | 조회수 ${event.hits ?? 0}</p>
+                <p>⭐️ ${event.avg_rating} | 조회수 ${event.hits}</p>
               </div>
             </a>
           </div>
